[package]
name = "packet-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
wot_replay_parser = { git = "https://github.com/dacite/wot-battle-results-parser" }
serde_json = "1.0.87"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.147", features = ["derive"] }
[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "console"
]
